style.css
body {
font-family: 'Open Sans', sans-serif;
width:1024px;
height:768px;
color: white;
margin: 0;
background-image: url(assets/graphy.png), radial-gradient(rgb(60, 137, 199), rgb(50, 100, 140));
background-position: center;
background-clip: content-box;
}


/*============= STYLES FOR TEXT ===========*/

p {
  margin-top: 10px;
  font-size: 12pt;
  font-weight: 300;
}

h1 {
  font-weight: 800;
  font-size: 40pt;
}

h2 {
  font-weight: 300;
  font-size: 20pt;
}

h3 {
  font-size: 20pt;
  opacity: .75;
  margin-top: 15px;
}

h4 {
  font-weight: 400;
  font-size: 16pt;
}

h5 {
  margin-top: 0;
  margin-bottom: 0;
  font-weight: 600;
  font-size: 20pt;
}

a {
  text-decoration: none;
}

a:link {
  color: inherit;
}

a:visited {
  color: inherit;
}

.title {
  margin-top: 20px;
  position: relative;
  text-align: center;
  margin-bottom: -5px;
}

.subtitle {
  text-align: center;
  margin-top: 0;
}

.character-sub {
  text-transform: uppercase;
}

.character-point {
  font-weight: 600;
  font-size: 20pt;
  line-height: 10%;
  opacity: 1;
}

.hero-name {
  position: absolute;
  top:20px;
  left:60px;
  margin:0;
}

.character-info {
  color: white;
  position: absolute;
  top: 40px;
  right: 265px;
  margin:0;
  font-size: 20pt;
}

.buttons {
  color: rgb(255, 255, 255);
  font-size: 20pt;
  font-weight: 600;
  margin-right: 30px;
  padding-bottom: 10px;
  border-style: solid;
  border-color: white;
  border-width: 2px;
  border-radius: 10px;
  background-color: rgb(50, 100, 140);
  width: 150px;
  height: 30px;
  text-align: center;
  display: inline-block;
}

.btn-box a {
  text-decoration: none;
}

.btn-box li {
  list-type: none;
  display: inline-block;
}

.powers {
  margin-top: -10px;
  margin-bottom: 5px;
  font-size: 20pt;
  font-weight:400;
  line-height: 1.5;
}

.close-btn {
  border-style: solid;
  border-radius: 5px;
  font-size: 10pt;
  font-weight: 800;
  padding:10px;
  text-align: center;
  float:right;
  position: absolute;
  right: 20px;
  top: 30px;
}


/*============== WRITING ANIMATION ==========*/

.text-box p {
  color: white;
  font-size: 12pt;
  font-weight: 300;
  width: 100%;
}

/*============== PAGE STYLES =============*/

.scroll {
  margin: auto;
  width: 100%;
  padding-left: 280px;
  padding-right: 280px;
  box-sizing: border-box;
  height: 600px;
  overflow-x: scroll;
  overflow-y: hidden;
  white-space: nowrap;
  position: absolute;
  top: 160px;
}

.superhero {
  max-height: 750px;
  display: inline-block;
  vertical-align: bottom;
  text-align: center;
  margin-right: 80px;
}

.btn-box {
  position: absolute;
  bottom: 20px;
  width: 1024px;
  text-align: center;
}

.superhero-select {
  position: absolute;
  left: 60px;
  top: 140px;
}

.text-box {
  width: 400px;
  height: auto;
  max-height: 470px;
  overflow-y: scroll;
  padding: 5px 15px 5px 15px;
  background-color: rgba(19, 88, 111, 0.5);
  position:absolute;
  top:140px;
  right: 60px;
  outline: rgba(19, 88, 111, 0.25) solid 5px;
  -webkit-animation: outline 2.5s infinite; /* Chrome, Safari, Opera */
  animation: outline  2.5s infinite;
  animation-timing-function: ease-in-out;
}

/* Chrome, Safari, Opera */
  @-webkit-keyframes outline {
  50% {outline-offset: 15px;}
  }

/* Standard syntax */
  @keyframes outline {
  50% {outline-offset: 15px;}
  }

/*=========== STYLES FOR THUMBNAILS ===========*/

.img-tile {
  width: 100%;
  display: inline-block;
  padding-bottom: 10px;
}

.thumbs {
  display: inherit;
}

.thumbs h4 {
  float:left;
  margin-top:15px;
  margin-left: 15px;
  margin-bottom: 0px;
}

.thumbs p {
  width: 250px;
  float:left;
  margin-left: 15px;
}

.thumbnail {
  float:left;
  margin-top: 20px;
  border-style: solid;
  border-width: 5px;
  border-color: white;
}

/*=========== CIRCLES and GRAPHICS ==========*/

.circle {
  background-color: rgba(255, 255, 255, 0.5);
  position:absolute;
  float: left;
  width: 10px;
  height: 10px;
  border-width: 2px;
  border-style: solid;
  border-color: white;
  border-radius: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.circle a {
  padding: 20px;
  align-content: center;
}

#batman-circle1 {
  top:25px;
  left:240px;
}

#batman-circle2 {
  top:200px;
  left:265px;
}

#batman-circle3 {
  top:285px;
  left:340px;
}

#batman-circle4 {
  top:325px;
  left:60px;
}

#batman-circle5 {
  top:120px;
  left:250px;
}

/*=========== HIDING PAGES/TRANSITIONS ============*/

.hidden {
  display: none;
}

.v-hidden {
  display: none;
}

.pop {
  transform: rotate(deg 360);
}

.slide {
  transform: translateX(-100%);
}

.hero {
  position: relative;
  height: 768px;
  width: 1024px;
  transition: all 1s ease-in-out;
}

